src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Import custom fonts */
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap');

.fontXXX {
  font-family: 'Quicksand', sans-serif;
}

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

.scroll-shadow {
  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
}

.custom-border {
  border-width: 24px;
  border-color: #707070;
  background-color: transparent;
  border-style: solid;
  border-radius: 50%;
}

.bg-pattern {
  position: absolute;
  background-repeat: repeat;
  background-position: center;
  opacity: 1;
  border-radius: 0;
}

@font-face {
  font-family: 'Hamishe';
  src: url('/fonts/Hamishe/Hamishe.otf') format('opentype');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

.spinner {
  border: 4px solid rgba(255, 255, 255, 0.3);
  border-radius: 50%;
  border-top: 4px solid #000;
  width: 50px;
  height: 50px;
  -webkit-animation: spin 1s linear infinite;
  animation: spin 1s linear infinite;
}

@-webkit-keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
  }
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.Hamishe {
  font-family: 'Hamishe', serif;
}

.rtl-text {
  direction: rtl;
  text-align: right;
}

/* Media Queries */
@media (min-width: 375px) and (max-width: 430px) {
  .B14-SE1 {
    padding-left: 52px;
  }
  .B14-SE2 {
    padding-left: 32px;
  }
  .logoSsize {
    width: 35px;
    padding-right: 5px;
  }
  .absluteEnmonth {
    right: 19px;
    bottom: 12px;
  }
}

@media (min-width: 571px) and (max-width: 852px) {
  .customsizefologosite.customsizefologosite {
    width: 50px;
  }
}

@media (min-width: 640px) {
  .customsizefologosite {
    max-width: 250px;
  }
}

@media (min-width: 1024px) {
  .customsizefologosite {
    max-width: 350px;
  }
}

@media (min-width: 375px) and (max-width: 413px) {
  .grid.gC2 {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }
}

/* Custom Media Query for iPad Air */
@media (min-width: 819px) and (max-width: 821px) {
  .grid {
    grid-template-columns: repeat(3, minmax(0, 1fr));
    gap: rem;
  }
}

